update: Add Open Graph meta tags for improved social sharing and update favicon path

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta property="og:title" content="Truc Pham Portfolio" />
+		<meta
+			property="og:description"
+			content="Explore my personal details, projects, and portfolio of work."
+		/>
+		<meta
+			property="og:image"
+			content="https://images.unsplash.com/photo-1548625361-58a9b86aa83b?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+		/>
+		<meta property="og:url" content="https://trucpham.is-a.dev" />
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="../logo.png" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/public/assets/logos/logo.png"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Truc Pham</title>
 	</head>
